--- a/_includes/share_buttons.html
+++ b/_includes/share_buttons.html
@@ -1,6 +1,4 @@
 <div class="share-page">
-  {{ site.text.share_buttons.text | default: "Share this post!" }}
-
   <div class="share-links">
     {% if site.share_facebook %}
       <a class="fa fa-facebook" href="https://facebook.com/sharer.php?u={{ site.url | cgi_escape }}{{ page.url | cgi_escape }}" rel="nofollow" target="_blank" title="{{ site.text.share_buttons.facebook | default: "Share on Facebook" }}"></a>
@@ -36,6 +34,10 @@
 
     {% if site.share_hackernews %}
       <a class="fa fa-hacker-news" onclick="parent.postMessage('submit','*')" href="https://news.ycombinator.com/submitlink?u={{ site.url | cgi_escape }}{{ page.url | cgi_escape }}&amp;t={{ page.title | cgi_escape }}" rel="nofollow" target="_blank" title="{{ site.text.share_buttons.hackernews | default: "Share on Hacker News" }}"></a>
+    {% endif %}
+  
+    {% if site.share_email %}
+      <a class="fa fa-envelope" href="mailto:?subject={{ page.title }}&amp;body=Check out this site {{ site.url }}{{ site.baseurl }}{{ page.url }}" title="Share via Email" ></a>
     {% endif %}
   </div>
 </div>
