--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,10 +28,13 @@
 
     <!-- Fonts -->
     {% if site.extended_fonts %}
-    <link href="//fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap" rel="stylesheet">
     <link href='//fonts.googleapis.com/css?family=Merriweather:900,900italic,300,300italic&amp;subset=latin-ext,latin' rel='stylesheet' type='text/css'>
-    <link href='//fonts.googleapis.com/css?family=Lato:900,300&amp;subset=latin-ext,latin' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Averia+Libre|Chelsea+Market|Cormorant+SC|DM+Serif+Display|Gochi+Hand|Oregano|Roboto+Slab|Short+Stack|Titillium+Web|Waiting+for+the+Sunrise&display=swap" rel="stylesheet"> 
+    <link href="//fonts.googleapis.com/css?family=Waiting+for+the+Sunrise&display=swap" rel="stylesheet"> 
+    <link href="//fonts.googleapis.com/css?family=DM+Serif+Display&display=swap" rel="stylesheet"> 
+    <link href="//fonts.googleapis.com/css?family=Gochi+Hand&display=swap" rel="stylesheet"> 
+    <link href="//fonts.googleapis.com/css?family=Blinker&display=swap" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Oregano&display=swap" rel="stylesheet"> 
+    <link href="//fonts.googleapis.com/css?family=Gloria+Hallelujah|Kalam|Long+Cang|Special+Elite&display=swap" rel="stylesheet">
     {% else %}
     <link href="//fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap" rel="stylesheet">
     <link href='//fonts.googleapis.com/css?family=Merriweather:900,900italic,300,300italic' rel='stylesheet' type='text/css'>
