--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -1,3 +1,34 @@
+.page-navigation {
+    font-size: $h5 ;
+}
+
+.page-navigation a {
+    color: $mid-gray !important;
+    text-decoration: none !important;
+    font-family: $link-font-family !important;
+}
+
+.page-navigation .next {
+    float: right;
+}
+
+.page-navigation .home {
+    float: left;
+}
+
+.share-page {
+    float: right;
+    font-size: 1.25rem;
+    margin-right: 1rem;
+    opacity: .8;
+}
+
+.share-page 
+a:hover,
+a:focus,
+a:active {
+     background-image:none;
+}
 
 .posts {
   margin: 0;
@@ -5,7 +36,7 @@
 
 .posts .post {
   margin-bottom: 0.75em;
-  border-bottom: thin solid #f3f3f3;
+  border-bottom: 2px solid #eee;
 }
 
 .posts .post:last-child {
@@ -18,6 +49,11 @@
   margin-top: 0;
   font-weight: 600;
   color: #333;
+}
+
+.post-header {
+    border-top: 2px solid #eee;
+    margin-top: 1rem;
 }
 
 .post-footer {
@@ -42,7 +78,16 @@
   margin: 0;
   padding: .25em 0;
   color: #7a7a7a;
-  font-style: italic;
+  //font-style: italic;
+  font-family: $link-font-family;
+}
+
+
+
+.post-meta-container {
+  float: left;
+  font-family: $link-font-family;
+  color: $mid-gray;
 }
 
 .related-post-title {
