--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,17 +4,19 @@ $bold-font-weight: bold !default;
 $font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
 $line-height: 1.5 !default;
 //$heading-font-family: 'Waiting for the Sunrise', 'Helvetica Neue', Helvetica, sans-serif !default;
-//$heading-font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
-$heading-font-family: 'DM Serif Display', 'PT Serif', Georgia, 'Times New Roman', serif !default;
+$heading-font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
+//$heading-font-family: 'DM Serif Display', 'PT Serif', Georgia, 'Times New Roman', serif !default;
+$title-font-family: 'Special Elite', cursive, serif !default;
 //$title-font-family: 'Oregano', 'PT Serif', Georgia, 'Times New Roman', serif !default;
+//$title-font-family: 'Gochi Hand', 'PT Serif', Georgia, 'Times New Roman', serif !default;
+$link-font-family: 'Blinker', sans-serif;
 $title-color: royalblue;
 $heading-font-weight: 900 !default;
 $heading-line-height: 1.25 !default;
 $monospace-font-family: 'Source Code Pro', Consolas, monospace !default;
-$title-font-family: 'Gochi Hand', 'PT Serif', Georgia, 'Times New Roman', serif !default;
 $subtitle-font-family: $monospace-font-family; 
 $h1-title: 2.5rem !default;
-$h1: 1.75rem !default;
+$h1: 1.45rem !default;
 $h2: 1.25rem !default;
 $h3: 1.15rem !default;
 $h4: 1rem !default;
@@ -22,7 +24,7 @@ $h5: .875rem !default;
 $h6: .75rem !default;
 $h7: .6rem !default;
 $h00: 4rem !default;
-$h0: 3rem !default;
+$h0: 2.5rem !default;
 $h00-responsive: 8vw !default;
 $h0-responsive: 6vw !default;
 $h1-responsive: 4vw !default;
