--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -1,8 +1,9 @@
 .pagination {
-  font-size: 1rem;
+  font-size: $h5;
   font-family: $link-font-family; 
   font-weight: 300;
   text-align: center;
+  margin-right: 30px;
 }
 
 .pagination a, .pagination .disabled {
