--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,19 +1,23 @@
 // Typography
 $base-font-size: 18px !default;
 $bold-font-weight: bold !default;
-$font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
+//$font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
+$font-family: 'Rufina', 'PT Serif', Georgia, 'Times New Roman', serif !default;
 $line-height: 1.5 !default;
-//$heading-font-family: 'Waiting for the Sunrise', 'Helvetica Neue', Helvetica, sans-serif !default;
-$heading-font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
-//$heading-font-family: 'DM Serif Display', 'PT Serif', Georgia, 'Times New Roman', serif !default;
-$title-font-family: 'Special Elite', cursive, serif !default;
+$heading-font-family: $font-family; 
+//$heading-font-family: 'Enriqueta', 'Helvetica Neue', Helvetica, sans-serif !default;
+//$heading-font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
+//$title-font-family: 'Fredericka the Great', serif !default;
+$title-font-family: 'Special Elite', serif !default;
 //$title-font-family: 'Oregano', 'PT Serif', Georgia, 'Times New Roman', serif !default;
 //$title-font-family: 'Gochi Hand', 'PT Serif', Georgia, 'Times New Roman', serif !default;
-$link-font-family: 'Blinker', sans-serif;
+$link-font-family: 'Julius Sans One', 'PT Serif', Georgia, 'Times New Roman', serif !default;
+//$link-font-family: 'Blinker', sans-serif;
 $title-color: royalblue;
 $heading-font-weight: 900 !default;
 $heading-line-height: 1.25 !default;
-$monospace-font-family: 'Source Code Pro', Consolas, monospace !default;
+//$monospace-font-family: 'Source Code Pro', monospace !default;
+$monospace-font-family: 'Inconsolata', Consolas, monospace !default;
 $subtitle-font-family: $monospace-font-family; 
 $h1-title: 2.5rem !default;
 $h1: 1.45rem !default;
