--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -14,7 +14,7 @@
 
 .page-navigation .home {
     float: left;
-}
+n}
 
 .share-page {
     float: right;
@@ -53,7 +53,7 @@ a:active {
 
 .post-header {
     border-top: 2px solid #eee;
-    margin-top: 1rem;
+    margin-top: .75rem;
 }
 
 .post-footer {
