--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -53,7 +53,7 @@ a:active {
 
 .post-header {
     border-top: 2px solid #eee;
-    margin-top: .75rem;
+    margin-top: 0.75rem;
 }
 
 .post-footer {
