--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,18 +1,15 @@
 // Typography
 $base-font-size: 18px !default;
 $bold-font-weight: bold !default;
-//$font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
-$font-family: 'Rufina', 'PT Serif', Georgia, 'Times New Roman', serif !default;
+$font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
+//$font-family: 'Libre Baskerville', 'PT Serif', Georgia, 'Times New Roman', serif !default;
 $line-height: 1.5 !default;
 $heading-font-family: $font-family; 
-//$heading-font-family: 'Enriqueta', 'Helvetica Neue', Helvetica, sans-serif !default;
-//$heading-font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
 //$title-font-family: 'Fredericka the Great', serif !default;
 $title-font-family: 'Special Elite', serif !default;
 //$title-font-family: 'Oregano', 'PT Serif', Georgia, 'Times New Roman', serif !default;
 //$title-font-family: 'Gochi Hand', 'PT Serif', Georgia, 'Times New Roman', serif !default;
-$link-font-family: 'Julius Sans One', 'PT Serif', Georgia, 'Times New Roman', serif !default;
-//$link-font-family: 'Blinker', sans-serif;
+$link-font-family: 'Alegreya Sans SC', sans-serif;
 $title-color: royalblue;
 $heading-font-weight: 900 !default;
 $heading-line-height: 1.25 !default;
