--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,13 +29,12 @@
     <!-- Fonts -->
     {% if site.extended_fonts %}
     <!--<link href="//fonts.googleapis.com/css?family=Gochi+Hand&display=swap" rel="stylesheet"> -->
-    <!--<link href="//fonts.googleapis.com/css?family=Blinker&display=swap" rel="stylesheet"> -->
+    <!--<link href="//fonts.googleapis.com/css?family=Libre+Baskerville&display=swap" rel="stylesheet"> -->
+    <link href="//fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Rufina&display=swap" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
-    <!--<link href="//fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet"> -->
-    <link href="//fonts.googleapis.com/css?family=Enriqueta&display=swap" rel="stylesheet">
-    <link href="//fonts.googleapis.com/css?family=Fredericka+the+Great&display=swap" rel="stylesheet">
-    <link href="//fonts.googleapis.com/css?family=Julius+Sans+One&display=swap" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Alegreya+Sans+SC&display=swap" rel="stylesheet">
     {% else %}
     <link href="//fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap" rel="stylesheet">
     <link href='//fonts.googleapis.com/css?family=Merriweather:900,900italic,300,300italic' rel='stylesheet' type='text/css'>
