--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -1,5 +1,5 @@
 .page-navigation {
-    font-size: $h6 ;
+    font-size: $h5 ;
 }
 
 .page-navigation a {
@@ -14,7 +14,7 @@
 
 .page-navigation .home {
     float: left;
-n}
+}
 
 .share-page {
     float: right;
@@ -53,7 +53,7 @@ a:active {
 
 .post-header {
     border-top: 2px solid #eee;
-    margin-top: 0.75rem;
+    margin-top: 5px;
 }
 
 .post-footer {
@@ -63,7 +63,7 @@ a:active {
   text-align: center;
   padding: 4rem 2rem 2rem 2rem;
   border-top: #DFDFDE 1px solid;
-}
+};
 
 .post-footer .avatar {
   margin: 2rem 0;
