--- a/_sass/_media-queries.scss
+++ b/_sass/_media-queries.scss
@@ -7,7 +7,7 @@
       width: 115px;
       height: 100px;
       left: 0px;
-      top: 11px;
+      top: 10px;
   }
 
   .looking-image .img {
@@ -18,6 +18,7 @@
     padding-bottom: 0px;
     border-bottom: 2px solid #cdcdcd;
   }
+
 
   .site-header .site-title {
       float: none;
@@ -87,9 +88,14 @@
 
 }
 
-@media screen and (min-width: $viewport-medium) {
+@media screen and (max-width: $viewport-medium) {
   html {
-    //font-size: 18px;
+  }
+  .page-navigation { 
+    display:none;
+  }
+  .post-header {
+      border-top: none;
   }
 }
 
