--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -39,7 +39,7 @@ $measure-width: 42rem !default;
 
 // Viewport widths
 $viewport-small: 32em;
-$viewport-medium: 48em;
+$viewport-medium: 600px;
 $viewport-large: 64em;
 
 // Colors
