--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
   {% endif %}
 </div>
 {% endif %}
-<div class="clearfix"></div>
+<div class="clearfix bottom-border"></div>
 <div class="post-header mb1">
   <h1>{{ page.title }}</h1>
   <div class="post-meta-container">
