--- a/_sass/_media-queries.scss
+++ b/_sass/_media-queries.scss
@@ -97,6 +97,9 @@
   .post-header {
       border-top: none;
   }
+  .bottom-border {
+      border-bottom: none;
+  }
 }
 
 @media screen and (min-width: $viewport-large) {
